# vm-ia-dengue

./: .gitignore  README.md  pyproject.toml
dengue/: config.py  default.toml  main.py  rules.py
dengue/data/: data_set.py  diagnostico-da-dengue.md  prevencao-da-dengue.md  sinais-e-sintomas-da-dengue.md  transmissao-da-dengue.md  tratamento-da-dengue.md
