[tool.poetry]
name = "dengue"
version = "0.1.0"
description = ""
authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-generativeai = "^0.5.2"
dynaconf = "^3.2.5"
numpy = "^1.26.4"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
